--- a/Cost-Optimization-Using-Lambda/README
+++ b/Cost-Optimization-Using-Lambda/README
@@ -7,5 +7,8 @@ Downsizing underutilized instance:
 Lambda-function-downsize-underutilized-Instances.py - is the Python code to downsize the underutilized instances mainly from t2.medium to t2.micro
 
 IAM-additional-permission-downsize-underutilized-Instances.json - is the additional IAM role which needs to be added
+------------------------------------------------------------
+
+Detail steps: https://cosmicoceangreen.hashnode.dev/aws-lambda-for-cost-optimization
 
 
